# Local_RAG

./: .env.example  .gitignore  .semgrep.yml  AGENTS.md  LICENSE  Makefile  README.md  TODO.md  corpora.yml  docker-compose.gpu.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
.claude/: CLAUDE.md
backend/: .dockerignore  Dockerfile  Dockerfile.prod  mypy.ini  pyproject.toml
backend/scripts/: mypy-changed.sh
backend/src/nexus/: __init__.py  config.py  db.py  schema.sql
backend/src/nexus/api/: deps.py  main.py  routes_chat.py  routes_docs.py  routes_eval.py  routes_ingest.py  routes_models.py
backend/src/nexus/domain/: interfaces.py  models.py
backend/src/nexus/embed/: ollama_embed.py
backend/src/nexus/eval/: inspect_suite.py
backend/src/nexus/generate/: anthropic_chat.py  google_chat.py  ollama_chat.py  openai_chat.py  prompts.py  validate.py
backend/src/nexus/hooks/: executor.py
backend/src/nexus/ingest/: chunking.py  discover.py  mounts.py  ocr.py  pdf_extract_pypdf.py  pipeline.py  quality.py
backend/src/nexus/retrieve/: pgvector.py
backend/tests/: test_auth_and_docs.py  test_chat_failure.py  test_chat_parameters.py  test_chunking.py  test_empty_collections.py  test_file_serve_guard.py  test_health.py  test_hooks.py  test_hooks_executor.py  test_ingest_integration.py  test_ingest_mock.py  test_models_api.py  test_performance.py  test_providers.py  test_quality.py  test_regression.py  test_security.py  test_validate.py
docs/: ARCHITECTURE.md  RELEASE.md  RUNBOOK.md  SANDBOX.md  SECURITY.md  TESTING.md  THREAT_MODEL.md  (+1 more)
(+15 files in other folders)
